--- a/nextflow.config
+++ b/nextflow.config
@@ -1,29 +1,8 @@
-//*******
-///Running in O2 server with slurm and singularity
-//*******
-
-//singularity.enabled = true
-//singularity.autoMounts = true
-//singularity.cacheDir = "/n/app/singularity/containers/pac936/"
-//process.executor = 'slurm'
-
-
-//*******
-//Running in a mac local machine with docker installed
-//*******
-
-docker.enabled         = true
-docker.userEmulation   = true
-
-//option to make it run on mac with M1/M2 processor
-//docker.runOptions = '--platform linux/amd64'
-
 includeConfig 'resource.config'
 
-
 params {
-samples = "$PWD/local-samples.csv"
-output = "/Volumes/ssd/DFCI/10-garyoung/0-RAW/output3/"
+samples = "s3://dfci-1-gc-content-data/1-Sheet/aws-samples.csv"
+output = "s3://dfci-1-gc-content-data/output/"
 python_prog = "${projectDir}/auxiliar_programs/run_getFeature.py"
 cores = 4
 }
